--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -1,81 +1,268 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="src/styles/styles.css">
-  <link rel="stylesheet" href="src/styles/header.css">
-  <link rel="stylesheet" href="src/styles/home.css">
-  <link rel="stylesheet" href="src/styles/menu.css">
+  <script src="https://unpkg.com/scrollreveal"></script>
   <title>Landing Page</title>
 </head>
-
 <body>
-  <header>
-    <nav id="nav-bar">
-      <i class="fa-solid fa-burger" id="nav-logo"> FOOD</i>
-      <ul id="nav-list">
-        <li class="nav-item active">
-          <a href="#home">Início</a>
-        </li>
-        <li class="nav-item">
-          <a href="#menu">Cardápio</a>
-        </li>
-        <li class="nav-item">
-          <a href="#testimonials">Avaliações</a>
-        </li>
-      </ul>
-      <button class="btn-default">
-        Peça aqui
-      </button>
-      <button id="mobile-btn">
-        <i class="fa-solid fa-bars"></i>
-      </button>
-    </nav>
+    <header>
+      <nav id="navbar">
+        <i class="fa-solid fa-burger" id="nav-logo"> FOOD</i>
+        <ul id="nav-list">
+          <li class="nav-item active">
+            <a href="#home">Início</a>
+          </li>
+          <li class="nav-item">
+            <a href="#menu">Cardápio</a>
+          </li>
+          <li class="nav-item">
+            <a href="#testimonials">Avaliações</a>
+          </li>
+        </ul>
+        <button class="btn-default">
+          Peça aqui
+        </button>
+        <button id="mobile-btn">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </nav>
+      <div id="mobile-menu">
+        <ul id="mobile-nav-list">
+          <li class="nav-item">
+            <a href="#home">Início</a>
+          </li>
+          <li class="nav-item">
+            <a href="#menu">Cardápio</a>
+          </li>
+          <li class="nav-item">
+            <a href="#testimonials">Avaliações</a>
+          </li>
+        </ul>
+        <button class="btn-default">
+          Peça aqui
+        </button>
+      </div>
+    </header>
+    <main id="content">
+      <section id="home">
+        <div class="shape"></div>
+        <div id="cta">
+          <h1 class="title">
+            O sabor que vai até <span>você</span>
+          </h1>
 
-    <div id="mobile-menu">
-      <ul id="mobile-nav-list">
-        <li class="nav-item">
-          <a href="#home">Início</a>
-        </li>
-        <li class="nav-item">
-          <a href="#menu">Cardápio</a>
-        </li>
-        <li class="nav-item">
-          <a href="#testimonials">Avaliações</a>
-        </li>
-      </ul>
-      <button class="btn-default">
-        Peça aqui
-      </button>
-    </div>
-  </header>
-  <main id="content">
-    <section id="home">
-      <div class="shape"></div>
-      <div id="cta">
-        <h1 class="title">
-          O sabor que vai até <span>você</span>
-        </h1>
-        <p class="description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-        <div id="cta-buttons">
-          <a href="#" class="btn-default">Ver cardápio</a>
-          <a href="tel:+55555555" id="phone-button">
-            <button class="btn-default">
-              <i class="fa-solid fa-phone"></i>
-            </button>
-            (24) 91234-5678
-          </a>
+          <p class="description">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum enim, placeat praesentium ab magni ipsum dolores commodi
+            nemo, consequuntur sit, maiores eveniet. Aliquid suscipit fugiat tenetur dicta nostrum iure praesentium!
+          </p>
+
+          <div id="cta-buttons">
+            <a href="#" class="btn-default">
+              Ver cardápio
+            </a>
+
+            <a href="tel: +555555" id="phone-button">
+              <button class="btn-default">
+                <i class="fa-solid fa-phone"></i>
+              </button>
+              (24)99939-6836
+            </a>
+          </div>
+
+          <div class="social-media-buttons">
+            <a href="">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </div>
         </div>
+
+        <div id="banner">
+          <img src="src/images/hero.png" alt="">
+        </div>
+      </section>
+      
+      <section id="menu">
+        <h2 class="section-title">Cardápio</h2>
+        <h3 class="section-subtitle">Nossos pratos especiais</h3>
+        <div id="dishes">
+          <div class="dish">
+            <div class="dish-heart">
+              <i class="fa-solid fa-heart"></i>
+            </div>
+            <img src="src/images/dish.png" class="dish-image" alt="">
+            <h3 class="dish-title">
+              lorem ipsum
+            </h3>
+            <span class="dish-description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus minus placeat excepturi! Voluptate quia aperiam
+            </span>
+            <div class="dish-rate">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <span>(500+)</span>
+            </div>
+            <div class="dish-price">
+              <h4>R$20,00</h4>
+              <button class="btn-default">
+                <i class="fa-solid fa-basket-shopping"></i>
+              </button>
+            </div>
+          </div>
+          <div class="dish">
+            <div class="dish-heart">
+              <i class="fa-solid fa-heart"></i>
+            </div>
+            <img src="src/images/dish2.png" class="dish-image" alt="">
+            <h3 class="dish-title">
+              lorem ipsum
+            </h3>
+            <span class="dish-description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus minus placeat excepturi! Voluptate quia aperiam
+            </span>
+            <div class="dish-rate">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <span>(500+)</span>
+            </div>
+            <div class="dish-price">
+              <h4>R$20,00</h4>
+              <button class="btn-default">
+                <i class="fa-solid fa-basket-shopping"></i>
+              </button>
+            </div>
+          </div>
+          <div class="dish">
+            <div class="dish-heart">
+              <i class="fa-solid fa-heart"></i>
+            </div>
+            <img src="src/images/dish3.png" class="dish-image" alt="">
+            <h3 class="dish-title">
+              lorem ipsum
+            </h3>
+            <span class="dish-description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus minus placeat excepturi! Voluptate quia aperiam
+            </span>
+            <div class="dish-rate">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <span>(500+)</span>
+            </div>
+            <div class="dish-price">
+              <h4>R$20,00</h4>
+              <button class="btn-default">
+                <i class="fa-solid fa-basket-shopping"></i>
+              </button>
+            </div>
+          </div>
+          <div class="dish">
+            <div class="dish-heart">
+              <i class="fa-solid fa-heart"></i>
+            </div>
+            <img src="src/images/dish4.png" class="dish-image" alt="">
+            <h3 class="dish-title">
+              lorem ipsum
+            </h3>
+            <span class="dish-description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus minus placeat excepturi! Voluptate quia aperiam
+            </span>
+            <div class="dish-rate">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <span>(500+)</span>
+            </div>
+            <div class="dish-price">
+              <h4>R$20,00</h4>
+              <button class="btn-default">
+                <i class="fa-solid fa-basket-shopping"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="testimonials">
+        <img src="src/images/chef.png" id="testimonial-chef" alt="">
+        <div id="testimonials-content">
+          <h2 class="section-title">
+            Depoimentos
+          </h2>
+          <h3 class="section-subtitle">
+            O que falam sobre nós
+          </h3>
+          <div id="feedbacks">
+            <div class="feedback">
+              <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+              <div class="feedback-content">
+                <p>
+                  Fulo de tal
+                  <span>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </span>
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse omnis ea, distinctio praesentium eum ducimus
+                  deleniti quaerat ut natus dolore at recusandae aperiam provident enim asperiores laudantium, necessitatibus officiis!
+                </p>
+              </div>
+            </div>
+            <div class="feedback">
+              <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+              <div class="feedback-content">
+                <p>
+                  Fulo de tal
+                  <span>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </span>
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse omnis ea, distinctio praesentium eum ducimus
+                  deleniti quaerat ut natus dolore at recusandae aperiam provident enim asperiores laudantium, necessitatibus officiis!
+                </p>
+              </div>
+            </div>
+          </div>
+          <button class="btn-default">
+            Ver mais avaliações
+          </button>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <img src="src/images/wave.svg" alt="">
+      <div id="footer-items">
+        <span id="copyright">
+          &copy 2024 Matheus Lima Barbosa
+        </span>
         <div class="social-media-buttons">
           <a href="">
             <i class="fa-brands fa-whatsapp"></i>
@@ -88,106 +275,7 @@
           </a>
         </div>
       </div>
-      <div id="banner">
-        <img src="src/images/hero.png" alt="">
-      </div>
-    </section>
-    <section id="menu">
-      <h2 class="section-title">Cardápio</h2>
-      <h3 class="section-subtitle">Nossos pratos especiais</h3>
-      <div id="dishes">
-        <div class="dish">
-          <div class="dish-heart">
-            <i class="fa-solid fa-heart"></i>
-          </div>
-          <img src="src/images/dish.png" class="dish-image" alt="">
-          <h3 class="dish-title">lorem ipsum</h3>
-          <span class="dish-description">Lorem ipsum dolor, sit amet consectetur adipisicing elite.</span>
-          <div class="dish-rate">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <span>(500+)</span>
-          </div>
-          <div class="dish-price">
-            <h4>R$20,00</h4>
-            <button class="btn-default">
-              <i class="fa-solid fa-basket-shopping"></i>
-            </button>
-          </div>
-        </div>
-        <div class="dish">
-          <div class="dish-heart">
-            <i class="fa-solid fa-heart"></i>
-          </div>
-          <img src="src/images/dish2.png" class="dish-image" alt="">
-          <h3 class="dish-title">lorem ipsum</h3>
-          <span class="dish-description">Lorem ipsum dolor, sit amet consectetur adipisicing elite.</span>
-          <div class="dish-rate">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <span>(500+)</span>
-          </div>
-          <div class="dish-price">
-            <h4>R$20,00</h4>
-            <button class="btn-default">
-              <i class="fa-solid fa-basket-shopping"></i>
-            </button>
-          </div>
-        </div>
-        <div class="dish">
-          <div class="dish-heart">
-            <i class="fa-solid fa-heart"></i>
-          </div>
-          <img src="src/images/dish3.png" class="dish-image" alt="">
-          <h3 class="dish-title">lorem ipsum</h3>
-          <span class="dish-description">Lorem ipsum dolor, sit amet consectetur adipisicing elite.</span>
-          <div class="dish-rate">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <span>(500+)</span>
-          </div>
-          <div class="dish-price">
-            <h4>R$20,00</h4>
-            <button class="btn-default">
-              <i class="fa-solid fa-basket-shopping"></i>
-            </button>
-          </div>
-        </div>
-        <div class="dish">
-          <div class="dish-heart">
-            <i class="fa-solid fa-heart"></i>
-          </div>
-          <img src="src/images/dish4.png" class="dish-image" alt="">
-          <h3 class="dish-title">lorem ipsum</h3>
-          <span class="dish-description">Lorem ipsum dolor, sit amet consectetur adipisicing elite.</span>
-          <div class="dish-rate">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <span>(500+)</span>
-          </div>
-          <div class="dish-price">
-            <h4>R$20,00</h4>
-            <button class="btn-default">
-              <i class="fa-solid fa-basket-shopping"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-  <script src="src/javascript/script.js"></script>
+    </footer>
+    <script src="src/javascript/script.js"></script>
 </body>
-
 </html>
